examples/java/failing/left_right_class/Right.java
class MyCls {
        String b;
        boolean c;
        char d;
}
